--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "eslint-plugin-mongodb",
-  "version": "0.0.4",
+  "name": "eslint-plugin-mongodb-node",
+  "version": "0.0.1",
   "description": "A set of ESLint rules for Node.js projects using MongoDB.",
   "main": "dist/src/index.js",
   "typings": "dist/src/index.d.ts",
@@ -31,14 +31,14 @@
     "test": "jest",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --coverage false",
     "prettier": "prettier --write \"**/*.{js,ts,tsx,json,md}\"",
-    "prepublishOnly": "npm run build && npm run lint && npm run test",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
+    "prepublishOnly": "npm run build && npm run lint && npm run test",
     "prepare": "husky install"
   },
   "dependencies": {
-    "eslint": "~7.32.0",
-    "@typescript-eslint/parser": "~4.31.2",
     "@typescript-eslint/experimental-utils": "~4.31.2",
+    "@typescript-eslint/parser": "~4.31.2",
+    "eslint": "~7.32.0",
     "typescript": "~4.4.3"
   },
   "devDependencies": {
